# claude-code-source

./: .gitignore  KAIROS_ARCHITECTURE.md  README.md  knowledge-base.tar.gz.enc  skills-all.tar.gz.enc  skills-s4-s5.tar.gz.enc
.claude/: refs.jsonl
audio-comic-skills/: Cargo.toml
audio-comic-skills/crates/agi-orchestrator/: Cargo.toml
audio-comic-skills/crates/agi-orchestrator/src/: lib.rs
audio-comic-skills/crates/audio-comic-workflow/: Cargo.toml
audio-comic-skills/crates/audio-comic-workflow/src/: lib.rs
audio-comic-skills/crates/comic-style-consistency/: Cargo.toml
audio-comic-skills/crates/comic-style-consistency/src/: lib.rs
audio-comic-skills/crates/knowledge-base-manager/: Cargo.toml
audio-comic-skills/crates/knowledge-base-manager/src/: lib.rs
audio-comic-skills/crates/self-optimizing-yield/: Cargo.toml
audio-comic-skills/crates/self-optimizing-yield/src/: lib.rs
audio-comic-skills/crates/supervision-anti-drift/: Cargo.toml
audio-comic-skills/crates/supervision-anti-drift/src/: lib.rs
audio-comic-skills/crates/task-book-keeper/: Cargo.toml
audio-comic-skills/crates/task-book-keeper/src/: lib.rs
tasks/audio-comic-skills/kb-rust/: Cargo.toml  README.md  REFERENCE_PROJECTS.md  REQUIREMENTS_V2.md
tasks/audio-comic-skills/kb-rust/knowledge-base-test/: .index.jsonl  README.md
tasks/audio-comic-skills/kb-rust/knowledge-base-test/experience/: Supervisor-Tips.md
tasks/audio-comic-skills/kb-rust/knowledge-base-test/styles/: Rust-Style.md
tasks/audio-comic-skills/kb-rust/src/: main.rs
tasks/audio-comic-skills/kb-rust/v2/: CHANGELOG.md  Cargo.toml  SPEC.md
tasks/audio-comic-skills/kb-rust/v2/kb-v2-test/: .index.jsonl  .project.json  README.md  _backlinks.json
tasks/audio-comic-skills/kb-rust/v2/src/: default_workflow.md  main.rs
(+403 files in other folders)
