[workspace]
members = [
    "crates/task-book-keeper",
    "crates/knowledge-base-manager",
    "crates/comic-style-consistency",
    "crates/audio-comic-workflow",
    "crates/agi-orchestrator",
    "crates/supervision-anti-drift",
    "crates/self-optimizing-yield",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Audio Comic Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
git2 = "0.19"
openssl = "0.10"
