[package]
name = "kb-rust-v2"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
biji = ["reqwest", "tokio"]

[profile.release]
opt-level = 3
lto = true
